fix: add max-width to maincontent
In restaurant.html it is important to set a max-width in
pixels to <main id="maincontent"> because in really big
screens like in the iMacs the image gets too big and also
the map. You want to limit the width so that the content
stops growing endlessly in bigger and bigger screens

--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -35,19 +35,9 @@
 }
 
 @media screen and (min-width: 1024px) {
-    #restaurants-list,
-    #restaurant-container,
-    #reviews-container {
+    #maincontent {
         max-width: 1024px;
         margin-left: auto;
         margin-right: auto;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    #restaurants-list,
-    #restaurant-container,
-    #reviews-container {
-        max-width: 1200px;
     }
 }
